--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.1.2
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  cloud_firestore: ^5.2.1
 
 dev_dependencies:
   flutter_test:
